Font-face fuente personalizada en nuestro proyecto

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,32 @@
+@font-face {
+  font-family: charter;
+  src: url(../fonts/charter-regular.otf);
+  font-style: normal;
+  font-weight: normal;
+}
+@font-face {
+  font-family: charter;
+  src: url(../fonts/charter-italic.otf);
+  font-style: italic;
+  font-weight: 400;
+  /* el font-weight: 400; es igual que poner normal */
+}
+@font-face {
+  font-family: charter;
+  src: url(../fonts/charter-bold.otf);
+  font-style: normal;
+  font-weight: bold;
+}
+@font-face {
+  font-family: charter;
+  src: url(../fonts/charter-bold-italic.otf);
+  font-style: italic;
+  font-weight: 700;
+  /* font-weight: 700; es igual que poner bold */
+}
+
 :root {
+  font-family: charter;
   font-size: 16px;
   --gray40: #212121;
   --gray30: #212429;
