--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,18 @@
   --gray20: #424242;
   --gray10: #616161;
 }
+.place {
+  background-image: linear-gradient(
+      3.36deg,
+      #212325 -63.62%,
+      rgba(255, 255, 255, 0) 43.49%
+    ),
+    url("../images/patron-1.png");
+  /* background-repeat: no-repeat; */
+  /* background-position: left 30px bottom 50px; */
+  /* background-size: cover; */
+  height: 350px;
+}
 header {
   color: var(--gray10);
   font-size: 14px;
