--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,9 @@
   --gray20: #424242;
   --gray10: #616161;
 }
+body {
+  margin: 0;
+}
 .place {
   background-image: linear-gradient(
       3.36deg,
@@ -65,27 +68,85 @@ h1 {
   color: var(--gray40);
   font-size: 3.75em;
   /* 60px/16px=3.75em */
+  margin: 64px 0 0;
+  font-weight: normal;
+  line-height: 70.31px;
 }
 h1 + p {
   color: var(--gray40);
+  margin: 16px 0 0;
 }
-.modeloDeCaja > ol {
-  color: var(--gray20);
+p {
+  line-height: 24px;
+}
+hr {
+  margin: 64px 0;
 }
 h2 {
   color: var(--gray40);
   font-size: 2rem;
   /* 32px/16px=2rem a diferencia de em, rem toma el tamaño base al 
   padre mas grande del DOM en este caso al html que tiene por defecto 16pxs*/
+  font-weight: 400;
+}
+.seccion {
+  margin: 164px 0 0;
+}
+.seccion:first-of-type {
+  margin: 0%;
+}
+.seccion h2 {
+  margin: 0;
+}
+.seccion img {
+  margin: 16px 0 0;
+}
+.seccion p + p {
+  margin: 16px 0 0;
 }
 h3 {
   font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 28.13px;
 }
-h3,
-p {
-  color: var(--gray20);
+.setup img {
+  margin: 40px 0 0;
 }
-h3 + ul > li {
+.setup h3 {
+  margin: 16px 0 24px;
+}
+.setup p {
+  margin: 0;
+}
+.conceptos h3,
+.modeloDeCaja h3 {
+  margin: 40px 0 0;
+}
+.conceptos p,
+.modeloDeCaja p {
+  margin: 24px 0 0;
+}
+.conceptos p:first-of-type,
+.modeloDeCaja p:first-of-type {
+  margin: 16px 0 0;
+}
+blockquote {
+  margin: 32px 0 0;
+}
+.seccion + hr {
+  display: none;
+}
+pre {
+  background-color: #fec62e;
+}
+.seccion ol li {
+  line-height: 24px;
+}
+.seccion ul li {
+  line-height: 24px;
+  margin-top: 16px;
+}
+.modeloDeCaja > ol {
   color: var(--gray20);
 }
 /* La numeracion con css para cada una de nuestras secciones */
