--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,15 @@ nav details summary {
 p + details > summary {
   margin-top: 16px;
 }
+/* se puede utilizar varias de estas tecnicas para hacer debug
+y sober sobre que elemento se esta trabajando */
+/* .debug {
+  box-shadow: inset 0 0 0 6px coral;
+  outline: 5px solid green;
+  background: red;
+  border: 1px solid blue !important;
+  box-sizing: border-box;
+} */
 h1 {
   color: var(--gray40);
   font-size: 3.75em;
