--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,9 @@ h3 {
 .modeloDeCaja p:first-of-type {
   margin: 16px 0 0;
 }
+.conceptos img {
+  width: 900px;
+}
 blockquote {
   font-size: 1.5rem;
   margin: 32px 0 0;
