--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ nav details summary {
   cursor: pointer;
   line-height: 24px;
   margin-top: 24px;
+  outline: none;
 }
 p + details > summary {
   margin-top: 16px;
