Slider con html y css

--- a/css/style.css
+++ b/css/style.css
@@ -183,4 +183,27 @@ pre {
   margin-block: 16px;
 }
 
-/* falta ver que cambio hace este codigo */
+.slider-container {
+  display: block;
+  overflow: hidden;
+  scroll-behavior: smooth;
+  white-space: nowrap;
+  font-size: 0;
+}
+.video {
+  border-radius: 8px;
+  display: inline-block;
+  inline-size: 100%;
+  block-size: auto;
+  aspect-ratio: 16/9;
+}
+.slider-bullet-list {
+  text-align: center;
+}
+.slider-bullet {
+  display: inline-block;
+  block-size: 15px;
+  inline-size: 15px;
+  background: var(--gray20);
+  border-radius: 50%;
+}
