Responsive design - first mobile

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,9 @@
   line-height: 24px;
   color: var(--gray20);
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
 }
@@ -48,15 +51,15 @@ body {
   /* background-repeat: no-repeat; */
   /* background-position: left 30px bottom 50px; */
   /* background-size: cover; */
-  block-size: 350px;
+  /* block-size: 350px; */
+  block-size: 100px;
 }
 header {
   inline-size: 208px;
-  margin-block-start: 64px;
+  margin-block-start: 30px;
+  padding-inline-start: 16px;
   color: var(--gray10);
   font-size: 14px;
-  position: absolute;
-  inset-inline-start: -208px;
 }
 nav a {
   color: var(--gray10);
@@ -67,6 +70,7 @@ nav a:hover {
 }
 p {
   margin-block: 16px;
+  text-align: justify;
 }
 p a {
   color: var(--gray40);
@@ -85,17 +89,17 @@ nav ol li {
 
 h1 {
   color: var(--gray40);
-  font-size: 60px;
+  font-size: 50px;
   line-height: 70.31px;
   font-weight: 400;
-  margin-block: 64px 16px;
+  margin-block: 30px 16px;
 }
 h1 + p {
   color: var(--gray40);
 }
 hr {
   border: 1px solid rgba(97, 97, 97, 0.2);
-  margin-block: 64px;
+  margin-block: 40px;
 }
 h2 {
   color: var(--gray40);
@@ -104,7 +108,7 @@ h2 {
   padre mas grande del DOM en este caso al html que tiene por defecto 16pxs*/
   font-weight: normal;
   line-height: 37.5px;
-  margin-block: 64px 40px;
+  margin-block: 40px 40px;
 }
 h3 {
   font-weight: normal;
@@ -155,10 +159,10 @@ blockquote {
   border-inline-start: 4px solid var(--gray40);
   padding-inline-start: 16px;
 }
-blockquote p:last-of-type {
+blockquote h3:last-of-type {
   color: var(--gray10);
 }
-blockquote p + p::before {
+blockquote h3 + h3::before {
   content: "-";
 }
 pre {
@@ -167,14 +171,15 @@ pre {
   font-family: "Roboto", sans-serif;
   font-weight: normal;
   padding-block: 40px;
-  padding-inline: 40px 351px;
+  padding-inline: 40px;
+  overflow: auto;
 }
 .conceptos img {
   margin-block: 16px 40px;
   inline-size: 100%;
 }
 .conceptos img:last-of-type {
-  margin-block: 16px 164px;
+  margin-block: 16px 40px;
 }
 .no-Num h3 {
   margin-block: 40px 16px;
@@ -211,7 +216,7 @@ pre {
   border-radius: 50%;
 }
 .form {
-  margin-block: 40px 113px;
+  margin-block: 40px 40px;
   margin-inline-start: 3px;
   position: relative;
 }
@@ -227,9 +232,9 @@ form input {
   padding-block: 12px;
   padding-inline: 16px;
   color: var(--gray20);
-  margin-inline-end: 16px;
+  margin-block-end: 16px;
   block-size: 48px;
-  inline-size: 280px;
+  inline-size: 100%;
 }
 form input::-webkit-input-placeholder {
   color: var(--gray20);
@@ -238,10 +243,11 @@ form input[type="submit"] {
   border: none;
   color: white;
   background: #000000;
-  position: absolute;
-  inline-size: 119px;
-  inset-inline-start: 516px;
-  inset-block-end: 0;
+  /* position: absolute; */
+  /* inline-size: 119px; */
+  /* inset-inline-start: 516px; */
+  /* inset-inline-start: 0px; */
+  /* inset-block-end: 0; */
   cursor: pointer;
 }
 footer {
@@ -266,13 +272,92 @@ footer img {
   max-inline-size: 902px;
   margin: auto;
 }
-.header-content {
-  position: relative;
-}
 .main-content {
   padding-inline: 16px;
 }
-.header {
-  position: sticky;
-  inset-block-start: -35px;
+
+/*Móviles en horizontal o tablets en vertical*/
+@media screen and (min-width: 776px) {
+  .place {
+    block-size: 150px;
+  }
+  form {
+    margin-inline: 65px;
+  }
+  form input {
+    margin-inline-end: 16px;
+    inline-size: 280px;
+    margin-block-end: 0;
+  }
+  form input[type="submit"] {
+    position: absolute;
+    inline-size: 119px;
+    inset-inline-start: 550px;
+  }
+}
+/*Tablets en horizonal y escritorios normales*/
+@media screen and (min-width: 1024px) {
+  .place {
+    block-size: 250px;
+  }
+  header {
+    margin-block-start: 45px;
+    padding-inline-start: 0;
+    position: absolute;
+    inset-inline-start: -190px;
+  }
+  .header {
+    position: sticky;
+    inset-block-start: -35px;
+  }
+  .header-content {
+    position: relative;
+  }
+  .wrapper {
+    margin-inline-start: 200px;
+  }
+
+  h1 {
+    font-size: 55px;
+    margin-block: 45px 16px;
+  }
+  hr {
+    margin-block: 64px;
+  }
+  h2 {
+    margin-block: 64px 40px;
+  }
+  .conceptos img:last-of-type {
+    margin-block: 16px 164px;
+  }
+  .form {
+    margin-block: 40px 113px;
+  }
+}
+
+/*Escritorios muy anchos*/
+@media screen and (min-width: 1350px) {
+  .place {
+    block-size: 350px;
+  }
+  header {
+    margin-block-start: 64px;
+    padding-inline-start: 0;
+    position: absolute;
+    inset-inline-start: -208px;
+  }
+  .header {
+    position: sticky;
+    inset-block-start: -35px;
+  }
+  .header-content {
+    position: relative;
+  }
+  .wrapper {
+    margin: auto;
+  }
+  h1 {
+    font-size: 60px;
+    margin-block: 64px 16px;
+  }
 }
