--- a/css/style.css
+++ b/css/style.css
@@ -248,14 +248,15 @@ ul li::marker {
   color: var(--gray10);
 }
 footer {
-  background: var(--gray30);
+  background: var(--gray10);
   box-sizing: border-box;
   text-align: center;
   block-size: 174px;
   padding-block: 48px;
+  margin-block-start: 80px;
 }
 footer h2 {
-  color: white;
+  color: var(--gray40);
   margin-block: 0;
   margin-block-end: 19px;
 }
