--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,9 @@ p {
   margin-block: 16px;
   text-align: justify;
 }
+section + p {
+  text-align: center;
+}
 p a {
   color: var(--gray40);
 }
@@ -115,14 +118,10 @@ h3 {
   display: block;
 }
 .section h3 {
-  margin-block: 40px 24px;
+  margin-block: 40px 16px;
   counter-increment: namberLvl3; /* incrementamos el contdor namberLvl3 */
-  position: relative;
-  padding-block-end: 8px;
 }
-.setup h3 {
-  margin-block: 16px 24px;
-}
+
 /* La numeracion con css para cada una de nuestras secciones */
 /* reseteamos el contador en cada seccion para que inicie desde 1*/
 .section {
@@ -131,16 +130,6 @@ h3 {
 .section > h3::before {
   content: counter(namberLvl3) ". ";
   /* content: counter(namberLvl3, upper-roman) ".-"; contar en romanos*/
-}
-.section h3::after {
-  content: "";
-  width: 80px;
-  height: 4px;
-  background: var(--gray20);
-  display: inline-block;
-  position: absolute;
-  inset-inline-start: 0;
-  inset-block-end: 0;
 }
 blockquote + hr {
   display: none;
@@ -161,8 +150,8 @@ blockquote h3 + h3::before {
   content: "-";
 }
 pre {
-  background: #fec62e;
-  color: #000000;
+  background: #e5e5e5;
+  color: var(--gray20);
   font-family: "Roboto", sans-serif;
   font-weight: normal;
   padding-block: 40px;
@@ -238,11 +227,6 @@ form input[type="submit"] {
   border: none;
   color: white;
   background: #000000;
-  /* position: absolute; */
-  /* inline-size: 119px; */
-  /* inset-inline-start: 516px; */
-  /* inset-inline-start: 0px; */
-  /* inset-block-end: 0; */
   cursor: pointer;
 }
 footer {
@@ -264,7 +248,7 @@ footer img {
   margin-inline: 11px;
 }
 .wrapper {
-  max-inline-size: 902px;
+  max-inline-size: 966px;
   margin: auto;
 }
 .main-content {
@@ -273,6 +257,9 @@ footer img {
 
 /*Móviles en horizontal o tablets en vertical*/
 @media screen and (min-width: 776px) {
+  section + p {
+    text-align: start;
+  }
   form {
     margin-inline: 65px;
   }
